--- a/sis-desa/public/assets/css/style.css
+++ b/sis-desa/public/assets/css/style.css
@@ -9,3 +9,8 @@ NOTE:
 ------
 PLACE HERE YOUR OWN SCSS CODES AND IF NEEDED, OVERRIDE THE STYLES FROM THE OTHER STYLESHEETS.
 WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BETTER LIKE THIS.  */
+.datatable td {
+	overflow: hidden !important; /* this is what fixes the expansion */
+	text-overflow: ellipsis !important; /* not supported in all browsers, but I accepted the tradeoff */
+	white-space: nowrap !important;
+  }
